--- a/CSS flags/styles.css
+++ b/CSS flags/styles.css
@@ -84,7 +84,7 @@ border-radius: 50%;
 }
 
 
-.white{
+/* .white{
     width: 180px;
     height: 300px;
     background-color: white;
@@ -132,5 +132,103 @@ border-radius: 50%;
     border-top: 40px solid transparent;
     border-bottom: 50px solid transparent;
     border-left: 250px solid white;
+} */
+
+
+.green{
+    height: 300px;
+    width: 500px;
+    background-color: green;
+    position: relative;
 }
+
+.crvena{
+    height: 300px;
+    width: 167px;
+    background-color: red;
+    position: absolute;
+    left: 167px;
+}
+
+.zuta{
+    height: 300px;
+    width: 167px;
+    background-color: gold;
+    position: absolute;
+    left: 334px;
+}
+.zvijezda{
+    width: 120px;
+    height: 120px;
+    background: gold;
+    position: absolute;
+    top: 75px;
+    left: 25px;
+    clip-path: polygon(
+        50% 0%,
+        61% 35%,
+        98% 35%,
+        68% 57%,
+        79% 91%,
+        50% 70%,
+        21% 91%,
+        32% 57%,
+        2% 35%,
+        39% 35%
+    );
+
+}
+
+
+
+.crven{
+    width: 500px;
+    height: 300px;
+    background-color: red;
+    z-index: 1;
+    position: relative;
+}
+
+.krug_b{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: white;
+    position: absolute;
+    left: 60px;
+    top: 50px;
+}
+
+.krug_c{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: red;
+    position: absolute;
+    left: 115px;
+    top: 76px;
+}
+
+.zvijezda_b{
+    width: 100px;
+    height: 100px;
+    clip-path: polygon(
+        50% 0%,
+        61% 35%,
+        98% 35%,
+        68% 57%,
+        79% 91%,
+        50% 70%,
+        21% 91%,
+        32% 57%,
+        2% 35%,
+        39% 35%
+    );
+    background-color: white;
+    position: absolute;
+    transform: rotate(-20deg);
+    left: 253px;
+    top: 90px;
+}
+
 
