--- a/Zadace/Zadaca2.css
+++ b/Zadace/Zadaca2.css
@@ -1,7 +1,7 @@
 .okvir{
     width: 400px;
     height: 300px;
-    background-color: white;
+    background-color: #FFEFF7;
     border: 6px solid black;
     position: relative;
 }
@@ -18,7 +18,7 @@
     height: 150px;
     background-color: #226AA9;
     position:absolute;
-    top: 70px;
+    top: 25%;
     
 }
 .trokut{
@@ -34,14 +34,14 @@
 .crni{
     width: 0px;
     height: 0px;
-    border-top: 50px solid transparent;
-    border-bottom: 50px solid transparent;
-    border-left: 60px solid #000000;
+    border-top: 35.5px solid transparent;
+    border-bottom: 35.5px solid transparent;
+    border-left: 45px solid #000000;
     position: absolute;
     border-top-left-radius: 50%;
     border-bottom-left-radius: 50%;
-    top: 36px;
-    left: 195px;
+    top: 39.5px;
+    left: 204px;
     z-index: 1;
 }
 
